exports[`invalid(1): {\"maintainers\": [\"a\"], \"maintainers\": [\"b\"]} 1`] = `

[Input]
  1 | {"maintainers": ["a"], "maintainers": ["b"]}

`;

exports[`invalid(1): {\"maintainers\": [\"a\"], \"maintainers\": [\"b\"]} 2`] = `

Message:
> 1 | {"maintainers": ["a"], "maintainers": ["b"]}
    |                        ^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {}

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {"contributors": ["b"]}

`;

exports[`invalid(10): {\n\t\"maintainers\": [{\"name\": \"a\"}],\n\t\"contributors\": []\n} 1`] = `

[Input]
  1 | {
  2 | 	"maintainers": [{"name": "a"}],
  3 | 	"contributors": []
  4 | }

`;

exports[`invalid(10): {\n\t\"maintainers\": [{\"name\": \"a\"}],\n\t\"contributors\": []\n} 2`] = `

Message:
  1 | {
> 2 | 	"maintainers": [{"name": "a"}],
    | 	^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.
  3 | 	"contributors": []
  4 | }

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {
  2 | 	"contributors": []
  3 | }

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {
  2 | 	"contributors": [{"name": "a"}]
  3 | }

`;

exports[`invalid(11): {\n\t\"maintainers\": [\n\t\t\"a\"\n\t],\n\t\"contributors\": [\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"maintainers": [
  3 | 		"a"
  4 | 	],
  5 | 	"contributors": [
  6 | 	]
  7 | }

`;

exports[`invalid(11): {\n\t\"maintainers\": [\n\t\t\"a\"\n\t],\n\t\"contributors\": [\n\t]\n} 2`] = `

Message:
  1 | {
> 2 | 	"maintainers": [
    | 	^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.
  3 | 		"a"
  4 | 	],
  5 | 	"contributors": [
  6 | 	]
  7 | }

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {
  2 | 	"contributors": [
  3 | 	]
  4 | }

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {
  2 | 	"contributors": [
  3 | 		"a"
  4 | 	]
  5 | }

`;

exports[`invalid(12): {\"contributors\": [], \"maintainers\": [\"a\", \"b\"]} 1`] = `

[Input]
  1 | {"contributors": [], "maintainers": ["a", "b"]}

`;

exports[`invalid(12): {\"contributors\": [], \"maintainers\": [\"a\", \"b\"]} 2`] = `

Message:
> 1 | {"contributors": [], "maintainers": ["a", "b"]}
    |                      ^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {"contributors": []}

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {"contributors": ["a", "b"]}

`;

exports[`invalid(2): {\"maintainers\": [\"a\"], \"x\": 1, \"maintainers\": [\"b\"]} 1`] = `

[Input]
  1 | {"maintainers": ["a"], "x": 1, "maintainers": ["b"]}

`;

exports[`invalid(2): {\"maintainers\": [\"a\"], \"x\": 1, \"maintainers\": [\"b\"]} 2`] = `

Message:
> 1 | {"maintainers": ["a"], "x": 1, "maintainers": ["b"]}
    |                                ^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {"x": 1}

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {"x": 1, "contributors": ["b"]}

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"maintainers\": [\n\t\t\"Jane Doe <jane@example.com>\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"maintainers": [
  4 | 		"Jane Doe <jane@example.com>"
  5 | 	]
  6 | }

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"maintainers\": [\n\t\t\"Jane Doe <jane@example.com>\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"maintainers": [
    | 	^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.
  4 | 		"Jane Doe <jane@example.com>"
  5 | 	]
  6 | }

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {
  2 | 	"name": "foo"
  3 | }

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": [
  4 | 		"Jane Doe <jane@example.com>"
  5 | 	]
  6 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\",\n\t\"contributors\": [\n\t\t\"John Smith <john@example.com>\"\n\t],\n\t\"maintainers\": [\n\t\t\"Jane Doe <jane@example.com>\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": [
  4 | 		"John Smith <john@example.com>"
  5 | 	],
  6 | 	"maintainers": [
  7 | 		"Jane Doe <jane@example.com>"
  8 | 	]
  9 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\",\n\t\"contributors\": [\n\t\t\"John Smith <john@example.com>\"\n\t],\n\t\"maintainers\": [\n\t\t\"Jane Doe <jane@example.com>\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": [
  4 | 		"John Smith <john@example.com>"
  5 | 	],
> 6 | 	"maintainers": [
    | 	^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.
  7 | 		"Jane Doe <jane@example.com>"
  8 | 	]
  9 | }

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": [
  4 | 		"John Smith <john@example.com>"
  5 | 	]
  6 | }

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": [
  4 | 		"John Smith <john@example.com>",
  5 | 		"Jane Doe <jane@example.com>"
  6 | 	]
  7 | }

`;

exports[`invalid(5): {\n\t\"name\": \"foo\",\n\t\"contributors\": [],\n\t\"maintainers\": [\n\t\t\"Jane Doe <jane@example.com>\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": [],
  4 | 	"maintainers": [
  5 | 		"Jane Doe <jane@example.com>"
  6 | 	]
  7 | }

`;

exports[`invalid(5): {\n\t\"name\": \"foo\",\n\t\"contributors\": [],\n\t\"maintainers\": [\n\t\t\"Jane Doe <jane@example.com>\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": [],
> 4 | 	"maintainers": [
    | 	^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.
  5 | 		"Jane Doe <jane@example.com>"
  6 | 	]
  7 | }

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": []
  4 | }

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"contributors": ["Jane Doe <jane@example.com>"]
  4 | }

`;

exports[`invalid(6): {\"contributors\": [\"Bob\"], \"maintainers\": [\"Alice\", \"Carol\"]} 1`] = `

[Input]
  1 | {"contributors": ["Bob"], "maintainers": ["Alice", "Carol"]}

`;

exports[`invalid(6): {\"contributors\": [\"Bob\"], \"maintainers\": [\"Alice\", \"Carol\"]} 2`] = `

Message:
> 1 | {"contributors": ["Bob"], "maintainers": ["Alice", "Carol"]}
    |                           ^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {"contributors": ["Bob"]}

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {"contributors": ["Bob", "Alice", "Carol"]}

`;

exports[`invalid(7): {\"maintainers\": []} 1`] = `

[Input]
  1 | {"maintainers": []}

`;

exports[`invalid(7): {\"maintainers\": []} 2`] = `

Message:
> 1 | {"maintainers": []}
    |  ^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.

Suggestion 1/1: Remove the \`maintainers\` field.:
  1 | {}

`;

exports[`invalid(8): {\"contributors\": \"John Smith\", \"maintainers\": [\"Jane Doe <jane@example.com>\"]} 1`] = `

[Input]
  1 | {"contributors": "John Smith", "maintainers": ["Jane Doe <jane@example.com>"]}

`;

exports[`invalid(8): {\"contributors\": \"John Smith\", \"maintainers\": [\"Jane Doe <jane@example.com>\"]} 2`] = `

Message:
> 1 | {"contributors": "John Smith", "maintainers": ["Jane Doe <jane@example.com>"]}
    |                                ^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.

Suggestion 1/1: Remove the \`maintainers\` field.:
  1 | {"contributors": "John Smith"}

`;

exports[`invalid(9): {\"maintainers\": [{\"name\": \"a\"}], \"contributors\": []} 1`] = `

[Input]
  1 | {"maintainers": [{"name": "a"}], "contributors": []}

`;

exports[`invalid(9): {\"maintainers\": [{\"name\": \"a\"}], \"contributors\": []} 2`] = `

Message:
> 1 | {"maintainers": [{"name": "a"}], "contributors": []}
    |  ^^^^^^^^^^^^^ The \`maintainers\` field is managed by npm from the publishing account; remove it from \`package.json\`.

Suggestion 1/2: Remove the \`maintainers\` field.:
  1 | {"contributors": []}

Suggestion 2/2: Move the \`maintainers\` entries into \`contributors\`.:
  1 | {"contributors": [{"name": "a"}]}

`;
